--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,9 @@
-lib-cov
-*.seed
-*.log
-*.csv
-*.dat
-*.out
-*.pid
-*.gz
-
-pids
-logs
-results
-
+.DS_Store
+.log
+.idea
+*node_modules/
+#src/vendor/
 npm-debug.log
+.project
+.settings
+
