--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "request": "*",
     "dot": "*"
   },
-  "peerDependencies": {
+  "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-jshint": "~0.1.1"
   },
