--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   "dependencies": {
     "less": "~1.5.0",
     "dot": "~1.0.2",
-    "request": "~2.27.0"
+    "request": "~2.27.0",
+    "cheerio": "~0.13.1"
   },
   "devDependencies": {
     "grunt": "~0.4.2",
