--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-ez-frontend",
   "description": "Easily configure Grunt to concatenate, minimize js files, parse less files, concatenate them with other css files and minimize them using csso and autoprefix",
-  "version": "0.2.23",
+  "version": "1.0.0",
   "homepage": "https://github.com/royriojas/grunt-ez-frontend",
   "author": {
     "name": "Roy Riojas",
@@ -21,7 +21,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git@github.com:royriojas/grunt-ez-frontend.git"
+    "url": "https://github.com/royriojas/grunt-ez-frontend"
   },
   "bugs": {
     "url": "https://github.com/royriojas/grunt-ez-frontend/issues"
@@ -48,7 +48,6 @@
     "eslinter": "^1.0.0",
     "grunt": "~0.4.2",
     "grunt-bump": "0.0.13",
-    "grunt-jsbeautifier": "git://github.com/royriojas/grunt-jsbeautifier",
     "matchdep": "~0.3.0",
     "prepush": "^2.0.3",
     "time-grunt": "~0.2.8"
