--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-ez-frontend",
   "description": "Easily configure Grunt to concatenate, minimize js files, parse less files, concatenate them with other css files and minimize them using csso and autoprefix",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "homepage": "https://github.com/royriojas/grunt-ez-frontend",
   "author": {
     "name": "Roy Riojas",
@@ -14,7 +14,8 @@
     "lint": "npm run beautify && npm run eslint",
     "check": "npm run beautify-check && npm run eslint",
     "changelog": "changelogx -f markdown -o ./changelog.md",
-    "install-hooks": "prepush install && changelogx install-hook"
+    "install-hooks": "prepush install && changelogx install-hook",
+    "bump" : "bumpery --verify='npm run check'"
   },
   "prepush": [
     "npm run check"
